# mini-projeto-ia

./: README.md  projeto_1.py  projeto_2.py  projeto_3.py  pyproject.toml
